--- a/app/src/main/res/layout/fragment_carton.xml
+++ b/app/src/main/res/layout/fragment_carton.xml
@@ -5,9 +5,14 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:ignore="MissingDefaultResource">
-
+    <com.scwang.smartrefresh.layout.SmartRefreshLayout
+        android:id="@+id/smart"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    <include layout="@layout/common_head"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/cartoonRec"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 </android.support.constraint.ConstraintLayout>
