--- a/app/src/main/res/layout/item_watch_search_new.xml
+++ b/app/src/main/res/layout/item_watch_search_new.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/search_hot_ll"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -34,5 +35,18 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:orientation="vertical" />
+
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/search_songs_hot_rlv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            android:fadingEdge="none"
+            android:fastScrollEnabled="false"
+            android:footerDividersEnabled="false"
+            android:headerDividersEnabled="false"
+            android:scrollbars="vertical"
+            android:smoothScrollbar="true" />
     </LinearLayout>
 </LinearLayout>
