--- a/app/src/main/res/layout/activity_video_search.xml
+++ b/app/src/main/res/layout/activity_video_search.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.SearchActivity"
+    tools:context=".activity.SearchVideoActivity"
     tools:ignore="MissingDefaultResource">
 
     <RelativeLayout
