--- a/app/src/main/res/layout/item_watch_search_hot_title.xml
+++ b/app/src/main/res/layout/item_watch_search_hot_title.xml
@@ -8,8 +8,7 @@
         android:id="@+id/iv_search_hot"
         android:layout_width="@dimen/dp_15"
         android:layout_height="@dimen/dp_15"
-        android:layout_marginLeft="@dimen/dp_10"
-        android:layout_marginTop="@dimen/dp_15"
+        android:layout_margin="@dimen/dp_10"
         android:src="@mipmap/icon_keyword_fire1" />
 
     <TextView
@@ -17,15 +16,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="@dimen/dp_10"
+        android:layout_marginStart="@dimen/dp_10"
+        android:layout_marginLeft="@dimen/dp_10"
+        android:layout_marginTop="@dimen/dp_8"
+        android:layout_marginRight="@dimen/dp_10"
         android:text=""
         android:textSize="@dimen/sp_20" />
-    <!-- <LinearLayout
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:gravity="center"
-         android:orientation="horizontal">-->
-
 
     <TextView
         android:id="@+id/tv_search_hot"
@@ -33,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dp_40"
         android:layout_marginLeft="@dimen/dp_40"
-        android:layout_marginTop="@dimen/dp_15"
+        android:layout_marginTop="@dimen/dp_10"
         android:gravity="center"
         android:text="超级飞侠" />
 
