--- a/app/src/main/res/layout/item_watch_search_recent_title.xml
+++ b/app/src/main/res/layout/item_watch_search_recent_title.xml
@@ -7,8 +7,12 @@
         android:id="@+id/iv_search_recent"
         android:layout_width="@dimen/dp_15"
         android:layout_height="@dimen/dp_15"
+        android:layout_marginStart="@dimen/dp_10"
         android:layout_marginLeft="@dimen/dp_10"
-        android:layout_marginTop="@dimen/dp_15"
+        android:layout_marginTop="@dimen/dp_10"
+        android:layout_marginEnd="@dimen/dp_10"
+        android:layout_marginRight="@dimen/dp_10"
+        android:layout_marginBottom="@dimen/dp_10"
         android:src="@mipmap/icon_duration" />
 
     <TextView
@@ -17,7 +21,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dp_40"
         android:layout_marginLeft="@dimen/dp_40"
-        android:layout_marginTop="@dimen/dp_15"
+        android:layout_marginTop="@dimen/dp_10"
+        android:layout_marginEnd="@dimen/dp_10"
+        android:layout_marginRight="@dimen/dp_10"
+        android:layout_marginBottom="@dimen/dp_10"
         android:gravity="center"
         android:text="超级飞侠" />
 </RelativeLayout>
