--- a/app/src/main/res/layout/activity_music_search.xml
+++ b/app/src/main/res/layout/activity_music_search.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -111,6 +112,7 @@
         android:layout_marginRight="@dimen/dp_8"
         android:orientation="vertical">
 
+
         <RelativeLayout
             android:id="@+id/hot_search_text"
             android:layout_width="wrap_content"
@@ -159,7 +161,7 @@
             android:layout_marginLeft="@dimen/dp_5"
             android:layout_marginRight="@dimen/dp_5"
             android:padding="@dimen/dp_12"
-            app:max_select="-1" />
+            app:max_select="0" />
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
