--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -12,6 +12,7 @@
         android:id="@+id/settingTool"
         >
         <ImageView
+            android:id="@+id/iv_fh"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/return_backgroud"
