--- a/app/src/main/res/layout/item_watch_partner.xml
+++ b/app/src/main/res/layout/item_watch_partner.xml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="110dp"
-    android:orientation="horizontal">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <ImageView
-        android:layout_width="162dp"
-        android:layout_height="90dp"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="5dp"
-        android:scaleType="fitXY"
-        android:src="@mipmap/icon_notification" />
+        android:id="@+id/iv_parther"
+        android:layout_width="@dimen/dp_55"
+        android:layout_height="@dimen/dp_55"
+        android:layout_gravity="center"
+        android:src="@drawable/title_style_one" />
+
+    <TextView
+        android:id="@+id/tv_parther"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="@dimen/dp_15"
+        android:text="宝狄与好友"
+        android:textSize="@dimen/sp_10" />
 </LinearLayout>
