--- a/app/src/main/res/layout/fragment_see.xml
+++ b/app/src/main/res/layout/fragment_see.xml
@@ -38,8 +38,10 @@
             android:id="@+id/icon_search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
+            android:layout_marginEnd="@dimen/dp_10"
             android:layout_marginRight="@dimen/dp_10"
             android:src="@mipmap/icon_search_black" />
 
